--- a/test/element/test.ShapePath2DLayer.html
+++ b/test/element/test.ShapePath2DLayer.html
@@ -80,7 +80,7 @@
       const selected_area = document.getElementById('selected_area');
       selected_area.width = shapePath2DLayer.width;
       selected_area.height = shapePath2DLayer.height;
-      selected_area.contextConfig.foreColor = '#fff2';
+      selected_area.contextConfig.foreColor = '#fff';
       selected_area.contextConfig.backColor = '#f99';
       selected_area.contextConfig.lineWidth = 2
       selected_area.ctx.setLineDash([2, 6]);
@@ -115,8 +115,33 @@
         event.target.releasePointerCapture(event.pointerId);
         command.args[0].push([event.offsetX,event.offsetY]);
         command.closed = true;
-        selected_area.drawMode = 'fill';
-        selected_area.flush()
+        // selected_area.drawMode = 'fill';
+        // selected_area.drawMode = 'stroke-fill';
+        // selected_area.flush()
+
+
+        const path2D = selected_area.path2D;
+        const ctx = selected_area.ctx;
+        selected_area.ctx.save();
+        selected_area.contextConfig.foreColor = '#fff';
+        selected_area.contextConfig.backColor = '#f99';
+        selected_area.contextConfig.assignTo(ctx,true);
+
+        // 불투명으로 칠하기
+        ctx.fill(path2D,selected_area.fillRule);
+        // 선 그리기
+        selected_area.ctx.globalCompositeOperation = 'destination-over';
+        ctx.stroke(path2D);
+        // 칠하기에 반투명으로
+        // selected_area.ctx.globalCompositeOperation = 'source-over';
+        selected_area.contextConfig.foreColor = '#f00';
+        selected_area.contextConfig.assignTo(ctx,true);
+        selected_area.ctx.globalCompositeOperation = 'destination-out';
+        selected_area.ctx.globalAlpha = 0.8;
+        ctx.fill(path2D,selected_area.fillRule);
+
+        selected_area.ctx.restore();
+        selected_area.sync()
         console.log(event.type,command);
       }
     })
