--- a/index.html
+++ b/index.html
@@ -394,7 +394,7 @@
         </div>
       </div>
       <div id="wc-editor" class="wc-editor wc-app-body debug-box">
-        <!-- <div class="wc-frame">
+        <!-- <div class="wc-document-stage">
           <canvas id="wc-document" class="wc-document" width="300" height="300" is="wc-document"></canvas>
         </div> -->
         <ui-transform-tool id="utt01" class="custom-01 only-shown only-shown-tool-Transform only-shown-tool-Text only-display-tool-enable" resizable moveable integeronly  width="100" height="100" left="10" top="10" >
