컬러 파레트에 스크롤 생기는 것 처리

--- a/test/element/ui.TextLayer.html
+++ b/test/element/ui.TextLayer.html
@@ -490,8 +490,7 @@
                 <h2 class="modal-title fs-4"><i class="bi bi-palette"></i> Color palette</h1>
                 <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
             </div>
-            <div class="modal-body brush-config">
-                <div id="box-color-palette"></div>
+            <div class="modal-body brush-config" id="box-color-palette">
             </div>
         </div>
     </div>
