--- a/index.html
+++ b/index.html
@@ -2235,8 +2235,7 @@
             <h2 class="modal-title fs-4"><i class="bi bi-palette"></i> Color palette</h2>
             <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
           </div>
-          <div class="modal-body brush-config">
-            <div id="box-color-palette"></div>
+          <div class="modal-body brush-config d-flex" id="box-color-palette">
           </div>
         </div>
       </div>
