--- a/index.html
+++ b/index.html
@@ -2281,13 +2281,13 @@
             <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
           </div>
           <div class="modal-body" onclick="wcSyncHandler.sync(this.closest('.modal'))">
-            <form class="d-flex flex-column gap-3" action="" data-wc-sync-form="editor.tool" onsubmit="return false;" onchange="Object.assign(editor.tool,Wc.HtmlUtil.formToObject(this))">
+            <form class="d-flex flex-column gap-3" action="" data-wc-sync-form="editor.tool" onsubmit="return false;" onchange="Object.assign(editor.tool,Wc.HtmlUtil.formToObject(this))" oninput="Object.assign(editor.tool,Wc.HtmlUtil.formToObject(this))">
               <div>
                 <div class="form-label mb-0"><i class="bi bi-pentagon"></i> Points(꼭지점의 수)</div>
                 <div class="input-group ui-input-stepper">
                   <button type="button" class="btn btn-primary btn-stepper" data-stepper="down">-</button>
-                  <div class="form-control ui-input-stepper-data-value" data-value="3">
-                    <input type="range" class="form-range d-block" name="points" placeholder="size" min="3" max="30" step="1" value="3">
+                  <div class="form-control ui-input-stepper-data-value" data-value="5">
+                    <input type="range" class="form-range d-block" name="points" placeholder="size" min="3" max="30" step="1" value="5">
                   </div>
                   <button type="button" class="btn btn-primary btn-stepper" data-stepper="up">+</button>
                 </div>
@@ -2317,13 +2317,13 @@
             <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
           </div>
           <div class="modal-body" onclick="wcSyncHandler.sync(this.closest('.modal'))">
-            <form class="d-flex flex-column gap-3" action="" data-wc-sync-form="editor.tool" onsubmit="return false;" onchange="Object.assign(editor.tool,Wc.HtmlUtil.formToObject(this))">
+            <form class="d-flex flex-column gap-3" action="" data-wc-sync-form="editor.tool" onsubmit="return false;" onchange="Object.assign(editor.tool,Wc.HtmlUtil.formToObject(this))" oninput="Object.assign(editor.tool,Wc.HtmlUtil.formToObject(this))">
               <div>
                 <div class="form-label mb-0"><i class="bi bi-pentagon"></i> Points(꼭지점의 수)</div>
                 <div class="input-group ui-input-stepper">
                   <button type="button" class="btn btn-primary btn-stepper" data-stepper="down">-</button>
                   <div class="form-control ui-input-stepper-data-value" data-value="3">
-                    <input type="range" class="form-range d-block" name="points" placeholder="size" min="3" max="30" step="1" value="3">
+                    <input type="range" class="form-range d-block" name="points" placeholder="size" min="2" max="30" step="1" value="3">
                   </div>
                   <button type="button" class="btn btn-primary btn-stepper" data-stepper="up">+</button>
                 </div>
@@ -2342,8 +2342,8 @@
                 <div class="form-label mb-0"><i class="bi bi-pentagon-fill"></i> Inner radius(내부 지름)</div>
                 <div class="input-group ui-input-stepper">
                   <button type="button" class="btn btn-primary btn-stepper" data-stepper="down">-</button>
-                  <div class="form-control ui-input-stepper-data-value" data-value-suffix="%" data-value-multipler="100" data-value-to-fixed="0" data-value="0.5">
-                    <input type="range" class="form-range d-block" name="innerRadiusPercent" placeholder="innerRadiusPercent" step="0.01" min="0" max="1" value="0.5">
+                  <div class="form-control ui-input-stepper-data-value" data-value-suffix="%" data-value-multipler="100" data-value-to-fixed="0" data-value="0.4">
+                    <input type="range" class="form-range d-block" name="innerRadiusPercent" placeholder="innerRadiusPercent" step="0.01" min="0" max="1" value="0.4">
                   </div>
                   <button type="button" class="btn btn-primary btn-stepper" data-stepper="up">+</button>
                 </div>
