--- a/index.html
+++ b/index.html
@@ -423,6 +423,12 @@
                   <button class="btn btn-warning" onclick="editor.document.selectionLayer.eraseLayer(editor.document.layer);editor.document.layer.flush();editor.saveHistory('erase');"><i class="bi bi-eraser-fill"></i> Erase</button>
                 </div>
               </div>
+              <div>
+                <div class="form-label mb-0"><i class="bi bi-info-circle"></i> Control</div>
+                <div class="d-flex gap-1">
+                  <button class="btn btn-success" onclick="editor.document.selectionLayer.clear();editor.document.selectionLayer.flush();"><i class="bi bi-eraser-fill"></i> Clear</button>
+                </div>
+              </div>
             </div>
           </div>
         </div>
