wc/element/SelectionLayer.js clear , invert

--- a/index.html
+++ b/index.html
@@ -426,7 +426,8 @@
               <div>
                 <div class="form-label mb-0"><i class="bi bi-info-circle"></i> Control</div>
                 <div class="d-flex gap-1">
-                  <button class="btn btn-success" onclick="editor.document.selectionLayer.clear();editor.document.selectionLayer.flush();"><i class="bi bi-eraser-fill"></i> Clear</button>
+                  <button class="btn btn-warning" onclick="editor.document.selectionLayer.clear();editor.document.selectionLayer.flush();"><i class="bi bi-eraser-fill"></i> Clear</button>
+                  <button class="btn btn-info" onclick="editor.document.selectionLayer.invert();editor.document.selectionLayer.flush();"><i class="bi bi-square-half"></i> Invert</button>
                 </div>
               </div>
             </div>
