하단 툴 추가 버튼 레이아웃 다시

--- a/index.html
+++ b/index.html
@@ -362,7 +362,7 @@
       <div class="wc-app-footer">
         
 
-        <div class="container-xl  p-0 d-flex flex-wrap gap-3 row-gap-1 align-items-end">
+        <div class="container-xl  p-0 d-flex flex-wrap gap-3 row-gap-1 justify-content-between align-items-end">
 
           <div class="wc-app-menu wc-app-menu-undo">
             <div class="d-flex gap-1  p-1">
